// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge should mount StatusBadge component with icon 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-radius: 12px;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  padding-right: calc(0.5 * var(--lendi-ui-size));
  border: 1px solid #4ec000;
  color: #4ec000;
  background-color: #f6fbf2;
}

.c1 {
  line-height: 0;
}

.c3 {
  font-size: calc(0.75 * var(--lendi-ui-size));
  line-height: calc(16 / 12);
  font-family: 'Open Sans',sans-serif;
  margin-bottom: 0;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  display: inline-block;
}

.c2 > svg {
  fill: #4ec000;
  width: inherit;
  height: inherit;
}

<StatusBadge
  hasIcon={true}
  statusText="COMPLETED"
  variant="success"
>
  <styled.div
    variant="success"
    withIcon={true}
  >
    <div
      className="c0"
    >
      <styled.span>
        <span
          className="c1"
        >
          <Check
            color="success.500"
            height="1em"
          >
            <styled.span
              color="success.500"
              height="1em"
            >
              <span
                className="c2"
                color="success.500"
                height="1em"
              >
                <svg
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                  />
                </svg>
              </span>
            </styled.span>
          </Check>
        </span>
      </styled.span>
      <styled.span
        size="sm"
      >
        <span
          className="c3"
          size="sm"
        >
          COMPLETED
        </span>
      </styled.span>
    </div>
  </styled.div>
</StatusBadge>
`;

exports[`StatusBadge should mount StatusBadge component without icon 1`] = `
.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-radius: 12px;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  padding-right: calc(0.5 * var(--lendi-ui-size));
  border: 1px solid #4ec000;
  color: #4ec000;
  background-color: #f6fbf2;
}

.c1 {
  line-height: 0;
}

.c3 {
  font-size: calc(0.75 * var(--lendi-ui-size));
  line-height: calc(16 / 12);
  font-family: 'Open Sans',sans-serif;
  margin-bottom: 0;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  display: inline-block;
}

.c2 > svg {
  fill: #4ec000;
  width: inherit;
  height: inherit;
}

<StatusBadge
  hasIcon={true}
  icon={false}
  statusText="COMPLETED"
  variant="success"
>
  <styled.div
    icon={false}
    variant="success"
    withIcon={true}
  >
    <div
      className="c0"
      icon={false}
    >
      <styled.span>
        <span
          className="c1"
        >
          <Check
            color="success.500"
            height="1em"
          >
            <styled.span
              color="success.500"
              height="1em"
            >
              <span
                className="c2"
                color="success.500"
                height="1em"
              >
                <svg
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                  />
                </svg>
              </span>
            </styled.span>
          </Check>
        </span>
      </styled.span>
      <styled.span
        size="sm"
      >
        <span
          className="c3"
          size="sm"
        >
          COMPLETED
        </span>
      </styled.span>
    </div>
  </styled.div>
</StatusBadge>
`;
